--- a/index.css
+++ b/index.css
@@ -463,6 +463,7 @@ footer{
     margin:3px;
     width: 30px;
     height: 30px;
+    cursor: pointer;
   }
 
   .fa-facebook-f , .fa-twitter , .fa-instagram{
